--- a/briar-tests/build.xml
+++ b/briar-tests/build.xml
@@ -113,6 +113,7 @@
 			<test name='org.briarproject.messaging.PacketReaderImplTest'/>
 			<test name='org.briarproject.messaging.SimplexMessagingIntegrationTest'/>
 			<test name='org.briarproject.messaging.SinglePassOutgoingSessionTest'/>
+			<test name='org.briarproject.plugins.ConnectionRegistryImplTest'/>
 			<test name='org.briarproject.plugins.PluginManagerImplTest'/>
 			<test name='org.briarproject.plugins.file.LinuxRemovableDriveFinderTest'/>
 			<test name='org.briarproject.plugins.file.MacRemovableDriveFinderTest'/>
@@ -125,7 +126,6 @@
 			<test name='org.briarproject.serial.ReaderImplTest'/>
 			<test name='org.briarproject.serial.WriterImplTest'/>
 			<test name='org.briarproject.system.LinuxSeedProviderTest'/>
-			<test name='org.briarproject.transport.ConnectionRegistryImplTest'/>
 			<test name='org.briarproject.transport.IncomingEncryptionLayerTest'/>
 			<test name='org.briarproject.transport.KeyManagerImplTest'/>
 			<test name='org.briarproject.transport.KeyRotationIntegrationTest'/>
