--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -4,7 +4,11 @@
 	android:versionCode="6"
 	android:versionName="0.6" >
 
-	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19" />
+	<uses-sdk
+	    android:minSdkVersion="7"
+	    android:targetSdkVersion="20"
+	    android:maxSdkVersion="20"
+	/>
 
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
