fixed missing linked folder resource

--- a/briar-android/.project
+++ b/briar-android/.project
@@ -30,4 +30,11 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>gen</name>
+			<type>2</type>
+			<location>${PROJECT_LOC}/build/generated/source</location>
+		</link>
+	</linkedResources>
 </projectDescription>
