--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ android:
     - 'android-sdk-.*'
     - '.*intel.+'
 script:
-  - gradlew build
+  - ./gradlew build
 notifications:
   - email: false
