--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.briarproject"
-	android:versionCode="6"
-	android:versionName="0.6" >
+	android:versionCode="7"
+	android:versionName="0.7" >
 
 	<uses-sdk
-	    android:minSdkVersion="7"
-	    android:targetSdkVersion="20"
-	    android:maxSdkVersion="20"
+		android:minSdkVersion="7"
+		android:targetSdkVersion="20"
+		android:maxSdkVersion="20"
 	/>
+
+	<uses-feature android:name="android.hardware.bluetooth" />
 
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
