--- a/briar-core/.classpath
+++ b/briar-core/.classpath
@@ -7,6 +7,6 @@
 	<classpathentry kind="lib" path="libs/h2small-1.3.170.jar"/>
 	<classpathentry kind="lib" path="libs/weupnp-0.1.3-SNAPSHOT-briar.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="libs/lcrypto-jdk15on-152.jar"/>
+	<classpathentry kind="lib" path="libs/lcrypto-jdk15on-152.jar" sourcepath="libs/source/lcrypto-jdk15on-152-src.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
