--- a/briar-android/.classpath
+++ b/briar-android/.classpath
@@ -2,15 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/briar-core"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/briar-api"/>
 	<classpathentry exported="true" kind="lib" path="/briar-api/libs/guice-3.0-no_aop.jar"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="/briar-api/libs/javax.inject.jar"/>
 	<classpathentry exported="true" kind="lib" path="/briar-core/libs/h2small-1.3.170.jar"/>
 	<classpathentry exported="true" kind="lib" path="/briar-core/libs/weupnp-0.1.3-SNAPSHOT-briar.jar"/>
-	<classpathentry kind="lib" path="/briar-core/libs/lcrypto-jdk15on-152.jar"/>
+	<classpathentry exported="true" kind="lib" path="/briar-core/libs/lcrypto-jdk15on-152.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
