Set source and target to Java 6 in Android Studio.

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -35,4 +35,8 @@ android {
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
+    }
 }
