--- a/briar-android/.classpath
+++ b/briar-android/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry exported="true" kind="lib" path="/briar-api/libs/javax.inject.jar"/>
 	<classpathentry exported="true" kind="lib" path="/briar-core/libs/h2small-1.4.190.jar"/>
 	<classpathentry exported="true" kind="lib" path="/briar-core/libs/weupnp-0.1.3-SNAPSHOT-briar.jar"/>
-	<classpathentry exported="true" kind="lib" path="/briar-core/libs/lcrypto-jdk15on-152.jar"/>
+	<classpathentry exported="true" kind="lib" path="/briar-core/libs/spongy-core-1.53.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
