Updated Gradle wrapper.

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -39,4 +39,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_6
         targetCompatibility JavaVersion.VERSION_1_6
     }
+    lintOptions {
+        abortOnError false
+    }
 }
