--- a/briar-tests/build.gradle
+++ b/briar-tests/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'java'
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 dependencies {
     compile fileTree(dir: '../briar-api/libs', include: '*.jar')
