Touching startup failure notification now shows details
The text of the startup failure notification is unhelpful due to lack of
space. Touching the notification now launches an activity that gives details
of the problem and what can be done about it.

Closes #38

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -219,5 +219,10 @@
 				android:value=".android.contact.ContactListActivity"
 			/>
 		</activity>
+		<activity
+			android:name=".android.StartupFailureActivity"
+			android:logo="@drawable/logo"
+			android:label="@string/startup_failed_activity_title" >
+		</activity>
 	</application>
 </manifest>
