improved git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
-build
-.gradle
 .metadata
 *.tmp
-.idea
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Eclipse project files
+.classpath
+.project
+
+# Local configuration file (sdk path, etc)
 local.properties
+
+# Android Studio
+.idea
+.gradle
+build
+*.iml
