--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
 	<application
 		android:name=".android.BriarApplication"
-		android:theme="@style/LightTheme"
+		android:theme="@style/BriarTheme"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
 		android:allowBackup="false" >
