improved the crash handler and refactored the manifest

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 	<uses-sdk
 		android:minSdkVersion="9"
-		android:targetSdkVersion="22"
+		android:targetSdkVersion="23"
 	/>
 
 	<uses-feature android:name="android.hardware.bluetooth" />
@@ -26,6 +26,7 @@
 		android:theme="@style/LightTheme"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
+		android:logo="@drawable/logo"
 		android:allowBackup="false" >
 		<service
 			android:name=".android.BriarService"
@@ -36,8 +37,11 @@
 		</service>
 		<activity
 			android:name=".android.CrashReportActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/crash_report_title"
+			android:taskAffinity="org.briarproject.android.CrashHandler"
+			android:excludeFromRecents="true"
+			android:launchMode="singleInstance"
+			android:process=":briar_error_handler"
 			android:exported="false" >
 			<intent-filter>
 				<action android:name="org.briarproject.REPORT_CRASH" />
@@ -46,23 +50,19 @@
 		</activity>
 		<activity
 			android:name=".android.DashboardActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name" >
 		</activity>
 		<activity
 			android:name=".android.ExpiredActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name" >
 		</activity>
 		<activity
 			android:name=".android.PasswordActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name"
 			android:windowSoftInputMode="stateVisible" >
 		</activity>
 		<activity
 			android:name=".android.SettingsActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/settings_title"
 			android:parentActivityName=".android.DashboardActivity" >
 			<meta-data
@@ -72,12 +72,10 @@
 		</activity>
 		<activity
 			android:name=".android.SetupActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/setup_title" >
 		</activity>
 		<activity
 			android:name=".android.SplashScreenActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -86,12 +84,10 @@
 		</activity>
 		<activity
 			android:name=".android.TestingActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name" >
 		</activity>
 		<activity
 			android:name=".android.contact.ContactListActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/contact_list_title"
 			android:parentActivityName=".android.DashboardActivity" >
 			<meta-data
@@ -101,7 +97,6 @@
 		</activity>
 		<activity
 			android:name=".android.contact.ConversationActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name"
 			android:windowSoftInputMode="stateHidden"
 			android:parentActivityName=".android.contact.ContactListActivity" >
@@ -112,7 +107,6 @@
 		</activity>
 		<activity
 			android:name=".android.contact.ReadPrivateMessageActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name"
 			android:parentActivityName=".android.contact.ContactListActivity" >
 			<meta-data
@@ -122,7 +116,6 @@
 		</activity>
 		<activity
 			android:name=".android.contact.WritePrivateMessageActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name"
 			android:windowSoftInputMode="stateVisible"
 			android:parentActivityName=".android.contact.ContactListActivity" >
@@ -133,7 +126,6 @@
 		</activity>
 		<activity
 			android:name=".android.groups.AvailableGroupsActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/available_forums_title"
 			android:parentActivityName=".android.groups.GroupListActivity" >
 			<meta-data
@@ -143,7 +135,6 @@
 		</activity>
 		<activity
 			android:name=".android.groups.CreateGroupActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/create_forum_title"
 			android:windowSoftInputMode="stateVisible"
 			android:parentActivityName=".android.groups.GroupListActivity" >
@@ -154,7 +145,6 @@
 		</activity>
 		<activity
 			android:name=".android.groups.GroupActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name"
 			android:parentActivityName=".android.groups.GroupListActivity" >
 			<meta-data
@@ -164,7 +154,6 @@
 		</activity>
 		<activity
 			android:name=".android.groups.GroupListActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/forums_title"
 			android:parentActivityName=".android.DashboardActivity" >
 			<meta-data
@@ -174,7 +163,6 @@
 		</activity>
 		<activity
 			android:name=".android.groups.ReadGroupPostActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name"
 			android:parentActivityName=".android.groups.GroupListActivity" >
 			<meta-data
@@ -184,7 +172,6 @@
 		</activity>
 		<activity
 			android:name=".android.groups.ShareGroupActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name"
 			android:parentActivityName=".android.groups.GroupListActivity" >
 			<meta-data
@@ -194,7 +181,6 @@
 		</activity>
 		<activity
 			android:name=".android.groups.WriteGroupPostActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/app_name"
 			android:windowSoftInputMode="stateVisible"
 			android:parentActivityName=".android.groups.GroupListActivity" >
@@ -205,13 +191,11 @@
 		</activity>
 		<activity
 			android:name=".android.identity.CreateIdentityActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/new_identity_title"
 			android:windowSoftInputMode="stateVisible" >
 		</activity>
 		<activity
 			android:name=".android.invitation.AddContactActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/add_contact_title"
 			android:parentActivityName=".android.contact.ContactListActivity" >
 			<meta-data
@@ -221,7 +205,6 @@
 		</activity>
 		<activity
 			android:name=".android.StartupFailureActivity"
-			android:logo="@drawable/logo"
 			android:label="@string/startup_failed_activity_title" >
 		</activity>
 	</application>
