--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -125,35 +125,35 @@
 			/>
 		</activity>
 		<activity
-			android:name=".android.groups.AvailableGroupsActivity"
+			android:name=".android.forum.AvailableForumsActivity"
 			android:label="@string/available_forums_title"
-			android:parentActivityName=".android.groups.GroupListActivity" >
+			android:parentActivityName=".android.forum.ForumListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.groups.GroupListActivity"
+				android:value=".android.forum.ForumListActivity"
 			/>
 		</activity>
 		<activity
-			android:name=".android.groups.CreateGroupActivity"
+			android:name=".android.forum.CreateForumActivity"
 			android:label="@string/create_forum_title"
 			android:windowSoftInputMode="stateVisible"
-			android:parentActivityName=".android.groups.GroupListActivity" >
+			android:parentActivityName=".android.forum.ForumListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.groups.GroupListActivity"
+				android:value=".android.forum.ForumListActivity"
 			/>
 		</activity>
 		<activity
-			android:name=".android.groups.GroupActivity"
+			android:name=".android.forum.ForumActivity"
 			android:label="@string/app_name"
-			android:parentActivityName=".android.groups.GroupListActivity" >
+			android:parentActivityName=".android.forum.ForumListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.groups.GroupListActivity"
+				android:value=".android.forum.ForumListActivity"
 			/>
 		</activity>
 		<activity
-			android:name=".android.groups.GroupListActivity"
+			android:name=".android.forum.ForumListActivity"
 			android:label="@string/forums_title"
 			android:parentActivityName=".android.DashboardActivity" >
 			<meta-data
@@ -162,31 +162,31 @@
 			/>
 		</activity>
 		<activity
-			android:name=".android.groups.ReadGroupPostActivity"
+			android:name=".android.forum.ReadForumPostActivity"
 			android:label="@string/app_name"
-			android:parentActivityName=".android.groups.GroupListActivity" >
+			android:parentActivityName=".android.forum.ForumListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.groups.GroupListActivity"
+				android:value=".android.forum.ForumListActivity"
 			/>
 		</activity>
 		<activity
-			android:name=".android.groups.ShareGroupActivity"
+			android:name=".android.forum.ShareForumActivity"
 			android:label="@string/app_name"
-			android:parentActivityName=".android.groups.GroupListActivity" >
+			android:parentActivityName=".android.forum.ForumListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.groups.GroupListActivity"
+				android:value=".android.forum.ForumListActivity"
 			/>
 		</activity>
 		<activity
-			android:name=".android.groups.WriteGroupPostActivity"
+			android:name=".android.forum.WriteForumPostActivity"
 			android:label="@string/app_name"
 			android:windowSoftInputMode="stateVisible"
-			android:parentActivityName=".android.groups.GroupListActivity" >
+			android:parentActivityName=".android.forum.ForumListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.groups.GroupListActivity"
+				android:value=".android.forum.ForumListActivity"
 			/>
 		</activity>
 		<activity
