--- a/briar-tests/build.xml
+++ b/briar-tests/build.xml
@@ -106,16 +106,15 @@
 			<test name='org.briarproject.data.ReaderImplTest'/>
 			<test name='org.briarproject.data.WriterImplTest'/>
 			<test name='org.briarproject.db.BasicH2Test'/>
-			<test name='org.briarproject.db.DatabaseCleanerImplTest'/>
-			<test name='org.briarproject.db.DatabaseComponentImplTest'/>
+			<test name='org.briarproject.db.DatabaseComponentTest'/>
 			<test name='org.briarproject.db.ExponentialBackoffTest'/>
 			<test name='org.briarproject.lifecycle.ShutdownManagerImplTest'/>
 			<test name='org.briarproject.lifecycle.WindowsShutdownManagerImplTest'/>
-			<test name='org.briarproject.messaging.ConstantsTest'/>
-			<test name='org.briarproject.messaging.ConsumersTest'/>
-			<test name='org.briarproject.messaging.PacketReaderImplTest'/>
-			<test name='org.briarproject.messaging.SimplexMessagingIntegrationTest'/>
-			<test name='org.briarproject.messaging.SimplexOutgoingSessionTest'/>
+			<test name='org.briarproject.sync.ConstantsTest'/>
+			<test name='org.briarproject.sync.ConsumersTest'/>
+			<test name='org.briarproject.sync.PacketReaderImplTest'/>
+			<test name='org.briarproject.sync.SimplexMessagingIntegrationTest'/>
+			<test name='org.briarproject.sync.SimplexOutgoingSessionTest'/>
 			<test name='org.briarproject.plugins.ConnectionRegistryImplTest'/>
 			<test name='org.briarproject.plugins.PluginManagerImplTest'/>
 			<test name='org.briarproject.plugins.file.LinuxRemovableDriveFinderTest'/>
