--- a/briar-tests/build.xml
+++ b/briar-tests/build.xml
@@ -106,7 +106,7 @@
 			<test name='org.briarproject.data.ReaderImplTest'/>
 			<test name='org.briarproject.data.WriterImplTest'/>
 			<test name='org.briarproject.db.BasicH2Test'/>
-			<test name='org.briarproject.db.DatabaseComponentTest'/>
+			<test name='org.briarproject.db.DatabaseComponentImplTest'/>
 			<test name='org.briarproject.db.ExponentialBackoffTest'/>
 			<test name='org.briarproject.lifecycle.ShutdownManagerImplTest'/>
 			<test name='org.briarproject.lifecycle.WindowsShutdownManagerImplTest'/>
