--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     compile project(':briar-core')
     compile fileTree(dir: 'libs', include: '*.jar')
     compile "com.android.support:appcompat-v7:23.1.1"
+    compile 'com.android.support:recyclerview-v7:23.1.1'
 }
 
 android {
