--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -1,4 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'witness'
+
+repositories {
+    jcenter()
+}
 
 dependencies {
     compile fileTree(dir: '../briar-api/libs', include: '*.jar')
@@ -8,7 +13,23 @@ dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile "com.android.support:support-v4:23.1.1"
     compile "com.android.support:appcompat-v7:23.1.1"
+    compile "com.android.support:preference-v7:23.1.1"
+    compile "com.android.support:preference-v14:23.1.1"
     compile "com.android.support:design:23.1.1"
+    compile "info.guardianproject.panic:panic:0.5"
+}
+
+dependencyVerification {
+    verify = [
+            'com.android.support:support-v4:5c7dceb6c824089fe80f502e5206264048ef8bffa4e8ddeab180b81723e79b7f',
+            'com.android.support:appcompat-v7:0a8762214382b7e8d4b989b4ac10b5c846b957d767ccb7bccbc6be5afa885a82',
+            'com.android.support:preference-v7:4b6dabaa4400cbed885c7edc885aa6372468f48d628cc0d4a04b9ccd128ed324',
+            'com.android.support:preference-v14:a69906c2b29b315ac3c1fdf01537a7557660a65b8ea1cf891baa8665e1197459',
+            'com.android.support:design:41a9cd75ca78f25df5f573db7cedf8bb66beae00c330943923ba9f3e2051736d',
+            'com.android.support:support-annotations:f347a35b9748a4103b39a6714a77e2100f488d623fd6268e259c177b200e9d82',
+            'com.android.support:recyclerview-v7:7606373da0931a1e62588335465a0e390cd676c98117edab29220317495faefd',
+            'info.guardianproject.panic:panic:a7ed9439826db2e9901649892cf9afbe76f00991b768d8f4c26332d7c9406cb2',
+    ]
 }
 
 android {
