--- a/build.gradle
+++ b/build.gradle
@@ -5,5 +5,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath files('briar-core/libs/gradle-witness.jar')
     }
 }
