--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile "com.android.support:preference-v14:23.1.1"
     compile "com.android.support:design:23.1.1"
     compile "info.guardianproject.panic:panic:0.5"
+    compile "info.guardianproject.trustedintents:trustedintents:0.2"
 }
 
 dependencyVerification {
@@ -29,6 +30,7 @@ dependencyVerification {
             'com.android.support:support-annotations:f347a35b9748a4103b39a6714a77e2100f488d623fd6268e259c177b200e9d82',
             'com.android.support:recyclerview-v7:7606373da0931a1e62588335465a0e390cd676c98117edab29220317495faefd',
             'info.guardianproject.panic:panic:a7ed9439826db2e9901649892cf9afbe76f00991b768d8f4c26332d7c9406cb2',
+            'info.guardianproject.trustedintents:trustedintents:6221456d8821a8d974c2acf86306900237cf6afaaa94a4c9c44e161350f80f3e',
     ]
 }
 
