--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -6,9 +6,7 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: '../briar-api/libs', include: '*.jar')
     compile project(':briar-api')
-    compile fileTree(dir: '../briar-core/libs', include: '*.jar')
     compile project(':briar-core')
     compile fileTree(dir: 'libs', include: '*.jar')
     compile "com.android.support:support-v4:23.1.1"
@@ -16,6 +14,8 @@ dependencies {
     compile "com.android.support:preference-v7:23.1.1"
     compile "com.android.support:preference-v14:23.1.1"
     compile "com.android.support:design:23.1.1"
+    compile "org.roboguice:roboguice:2.0"
+    compile "org.connectbot.jsocks:jsocks:1.0.0"
     compile "info.guardianproject.panic:panic:0.5"
     compile "info.guardianproject.trustedintents:trustedintents:0.2"
 }
@@ -29,6 +29,8 @@ dependencyVerification {
             'com.android.support:design:41a9cd75ca78f25df5f573db7cedf8bb66beae00c330943923ba9f3e2051736d',
             'com.android.support:support-annotations:f347a35b9748a4103b39a6714a77e2100f488d623fd6268e259c177b200e9d82',
             'com.android.support:recyclerview-v7:7606373da0931a1e62588335465a0e390cd676c98117edab29220317495faefd',
+            'org.roboguice:roboguice:c5302f2648170ee6015a0d18fe0fcc87e09e415a34aeae3566e8d1a9dbb53f28',
+            'org.connectbot.jsocks:jsocks:4ae46cd23dfd2496e90a9cde5cd32884ec8b3871a8815dbf425dca224cbc2589',
             'info.guardianproject.panic:panic:a7ed9439826db2e9901649892cf9afbe76f00991b768d8f4c26332d7c9406cb2',
             'info.guardianproject.trustedintents:trustedintents:6221456d8821a8d974c2acf86306900237cf6afaaa94a4c9c44e161350f80f3e',
     ]
