--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
 	package="org.briarproject"
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:versionCode="11"
-	android:versionName="0.11" >
+	android:versionName="0.11">
 
 	<uses-sdk
-		android:minSdkVersion="9"
-		android:targetSdkVersion="22"
-
 		xmlns:tools="http://schemas.android.com/tools"
-		tools:overrideLibrary="android.support.v14.preference"
-	/>
+		android:minSdkVersion="9"
 
-	<uses-feature android:name="android.hardware.bluetooth" />
+		android:targetSdkVersion="22"
+		tools:overrideLibrary="android.support.v14.preference"
+		/>
+
+	<uses-feature android:name="android.hardware.bluetooth"/>
 
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -23,183 +24,160 @@
 	<!-- Since API 23, this is needed to add contacts via Bluetooth -->
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<!-- FIXME: Only needed for alpha and beta builds -->
-	<uses-permission android:name="android.permission.READ_LOGS" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_LOGS"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 	<application
 		android:name=".android.BriarApplication"
-		android:theme="@style/BriarTheme"
+		android:allowBackup="false"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
 		android:logo="@drawable/logo"
-		android:allowBackup="false" >
+		android:theme="@style/BriarTheme">
 		<service
 			android:name=".android.BriarService"
-			android:exported="false" >
+			android:exported="false">
 			<intent-filter>
-				<action android:name="org.briarproject.android.BriarService" />
+				<action android:name="org.briarproject.android.BriarService"/>
 			</intent-filter>
 		</service>
 		<activity
 			android:name=".android.CrashReportActivity"
-			android:label="@string/crash_report_title"
-			android:taskAffinity="org.briarproject.android.CrashHandler"
 			android:excludeFromRecents="true"
+			android:exported="false"
+			android:label="@string/crash_report_title"
 			android:launchMode="singleInstance"
 			android:process=":briar_error_handler"
-			android:exported="false" >
+			android:taskAffinity="org.briarproject.android.CrashHandler">
 			<intent-filter>
-				<action android:name="org.briarproject.REPORT_CRASH" />
-				<category android:name="android.intent.category.DEFAULT" />
+				<action android:name="org.briarproject.REPORT_CRASH"/>
+				<category android:name="android.intent.category.DEFAULT"/>
 			</intent-filter>
 		</activity>
 		<activity
-			android:name=".android.DashboardActivity"
-			android:label="@string/app_name" >
-		</activity>
-		<activity
 			android:name=".android.ExpiredActivity"
-			android:label="@string/app_name" >
+			android:label="@string/app_name">
 		</activity>
 		<activity
 			android:name=".android.PasswordActivity"
 			android:label="@string/app_name"
-			android:windowSoftInputMode="stateVisible" >
-		</activity>
-		<activity
-			android:name=".android.SettingsActivity"
-			android:label="@string/settings_title"
-			android:parentActivityName=".android.DashboardActivity" >
-			<meta-data
-				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.DashboardActivity"
-			/>
+			android:windowSoftInputMode="stateVisible">
 		</activity>
 		<activity
 			android:name=".android.SetupActivity"
-			android:label="@string/setup_title" >
+			android:label="@string/setup_title">
 		</activity>
 		<activity
 			android:name=".android.SplashScreenActivity"
-			android:label="@string/app_name" >
+			android:label="@string/app_name">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
 		<activity
 			android:name=".android.TestingActivity"
-			android:label="@string/app_name" >
+			android:label="@string/app_name">
 		</activity>
+
 		<activity
-			android:name=".android.contact.ContactListActivity"
-			android:label="@string/contact_list_title"
-			android:parentActivityName=".android.DashboardActivity" >
-			<meta-data
-				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.DashboardActivity"
+			android:name=".android.NavDrawerActivity"
+			android:theme="@style/BriarThemeNoActionBar.Default"
+		    android:launchMode="singleTop"
 			/>
-		</activity>
+
 		<activity
 			android:name=".android.contact.ConversationActivity"
 			android:label="@string/app_name"
-			android:windowSoftInputMode="stateHidden"
-			android:parentActivityName=".android.contact.ContactListActivity" >
+			android:parentActivityName=".android.NavDrawerActivity"
+			android:windowSoftInputMode="stateHidden">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.contact.ContactListActivity"
-			/>
+				android:value=".android.NavDrawerActivity"
+				/>
 		</activity>
 		<activity
 			android:name=".android.forum.AvailableForumsActivity"
 			android:label="@string/available_forums_title"
-			android:parentActivityName=".android.forum.ForumListActivity" >
+			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.forum.ForumListActivity"
-			/>
+				android:value=".android.NavDrawerActivity"
+				/>
 		</activity>
 		<activity
 			android:name=".android.forum.CreateForumActivity"
 			android:label="@string/create_forum_title"
-			android:windowSoftInputMode="stateVisible"
-			android:parentActivityName=".android.forum.ForumListActivity" >
+			android:parentActivityName=".android.NavDrawerActivity"
+			android:windowSoftInputMode="stateVisible">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.forum.ForumListActivity"
-			/>
+				android:value=".android.NavDrawerActivity"
+				/>
 		</activity>
 		<activity
 			android:name=".android.forum.ForumActivity"
 			android:label="@string/app_name"
-			android:parentActivityName=".android.forum.ForumListActivity" >
+			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.forum.ForumListActivity"
-			/>
-		</activity>
-		<activity
-			android:name=".android.forum.ForumListActivity"
-			android:label="@string/forums_title"
-			android:parentActivityName=".android.DashboardActivity" >
-			<meta-data
-				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.DashboardActivity"
-			/>
+				android:value=".android.NavDrawerActivity"
+				/>
 		</activity>
 		<activity
 			android:name=".android.forum.ReadForumPostActivity"
 			android:label="@string/app_name"
-			android:parentActivityName=".android.forum.ForumListActivity" >
+			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.forum.ForumListActivity"
-			/>
+				android:value=".android.NavDrawerActivity"
+				/>
 		</activity>
 		<activity
 			android:name=".android.forum.ShareForumActivity"
 			android:label="@string/app_name"
-			android:parentActivityName=".android.forum.ForumListActivity" >
+			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.forum.ForumListActivity"
-			/>
+				android:value=".android.NavDrawerActivity"
+				/>
 		</activity>
 		<activity
 			android:name=".android.forum.WriteForumPostActivity"
 			android:label="@string/app_name"
-			android:windowSoftInputMode="stateVisible"
-			android:parentActivityName=".android.forum.ForumListActivity" >
+			android:parentActivityName=".android.NavDrawerActivity"
+			android:windowSoftInputMode="stateVisible">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.forum.ForumListActivity"
-			/>
+				android:value=".android.NavDrawerActivity"
+				/>
 		</activity>
 		<activity
 			android:name=".android.identity.CreateIdentityActivity"
 			android:label="@string/new_identity_title"
-			android:windowSoftInputMode="stateVisible" >
+			android:windowSoftInputMode="stateVisible">
 		</activity>
 		<activity
 			android:name=".android.invitation.AddContactActivity"
 			android:label="@string/add_contact_title"
-			android:parentActivityName=".android.contact.ContactListActivity" >
+			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.contact.ContactListActivity"
-			/>
+				android:value=".android.NavDrawerActivity"
+				/>
 		</activity>
 		<activity
 			android:name=".android.StartupFailureActivity"
-			android:label="@string/startup_failed_activity_title" >
+			android:label="@string/startup_failed_activity_title">
 		</activity>
 		<activity
 			android:name=".android.panic.PanicPreferencesActivity"
-			android:label="@string/panic_setting" >
+			android:label="@string/panic_setting">
 			<intent-filter>
-				<action android:name="info.guardianproject.panic.action.CONNECT" />
-				<action android:name="info.guardianproject.panic.action.DISCONNECT" />
-				<category android:name="android.intent.category.DEFAULT" />
+				<action android:name="info.guardianproject.panic.action.CONNECT"/>
+				<action android:name="info.guardianproject.panic.action.DISCONNECT"/>
+
+				<category android:name="android.intent.category.DEFAULT"/>
 			</intent-filter>
 		</activity>
 		<activity
@@ -208,12 +186,12 @@
 			android:theme="@android:style/Theme.NoDisplay">
 			<!-- this can never have launchMode singleTask or singleInstance! -->
 			<intent-filter>
-				<action android:name="info.guardianproject.panic.action.TRIGGER" />
-				<category android:name="android.intent.category.DEFAULT" />
+				<action android:name="info.guardianproject.panic.action.TRIGGER"/>
+				<category android:name="android.intent.category.DEFAULT"/>
 			</intent-filter>
 		</activity>
 		<activity
 			android:name=".android.panic.ExitActivity"
-			android:theme="@android:style/Theme.NoDisplay" />
+			android:theme="@android:style/Theme.NoDisplay"/>
 	</application>
 </manifest>
