--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -90,6 +90,7 @@
 		<activity
 			android:name=".android.contact.ConversationActivity"
 			android:label="@string/app_name"
+			android:theme="@style/BriarThemeNoActionBar.Default"
 			android:parentActivityName=".android.NavDrawerActivity"
 			android:windowSoftInputMode="stateHidden">
 			<meta-data
@@ -174,7 +175,16 @@
 			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.NavDrawerActivity"
+				android:value=".android.NavDrawerActivity"/>
+		</activity>
+		<activity
+			android:name=".android.introduction.IntroductionActivity"
+			android:label="@string/introduction_activity_title"
+			android:parentActivityName=".android.contact.ConversationActivity"
+			android:windowSoftInputMode="stateHidden|adjustResize">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.contact.ConversationActivity"
 				/>
 		</activity>
 		<activity
