--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,13 @@
 buildscript {
 	repositories {
 		mavenCentral()
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
 	}
 	dependencies {
 		classpath 'com.android.tools.build:gradle:1.5.0'
+		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 		classpath files('briar-core/libs/gradle-witness.jar')
 	}
 }
