--- a/briar-android-tests/build.gradle
+++ b/briar-android-tests/build.gradle
@@ -34,6 +34,16 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
     testApt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'javax.annotation:jsr250-api:1.0'
-    compile 'cglib:cglib-nodep:3.1'
     testCompile project(':briar-tests')
+}
+
+dependencyVerification {
+    verify = [
+            'com.android.support:appcompat-v7:14ab04eb2e3f302a082b79c308f6283d21909d1feb831a4e117cdacdad70adb7',
+            'com.google.dagger:dagger:84c0282ed8be73a29e0475d639da030b55dee72369e58dd35ae7d4fe6243dcf9',
+            'com.google.dagger:dagger-compiler:b74bc9de063dd4c6400b232231f2ef5056145b8fbecbf5382012007dd1c071b3',
+            'com.android.support:support-v4:992666398b80724a2f95ea3d7bf7c3d94fb810dcba7ae1aa6e38c0d6120d2603',
+            'com.android.support:support-annotations:7f21659b084da073b77b6f7fe7ab250c4f23346238d4efdbbbb937e017ae4693',
+    ]
+
 }
