--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -67,6 +67,7 @@
 		</activity>
 		<activity
 			android:name=".android.SplashScreenActivity"
+			android:theme="@style/BriarThemeNoActionBar.Default"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
