--- a/briar-tests/build.gradle
+++ b/briar-tests/build.gradle
@@ -15,6 +15,8 @@ dependencies {
 	compile project(':briar-desktop')
 	compile "junit:junit:4.12"
 	compile "org.jmock:jmock:2.8.1"
+	compile "org.jmock:jmock-junit4:2.8.1"
+	compile "org.jmock:jmock-legacy:2.8.1"
 	compile "org.hamcrest:hamcrest-library:1.3"
 	compile "org.hamcrest:hamcrest-core:1.3"
 }
@@ -23,6 +25,8 @@ dependencyVerification {
 	verify = [
 			'junit:junit:59721f0805e223d84b90677887d9ff567dc534d7c502ca903c0c2b17f05c116a',
 			'org.jmock:jmock:75d4bdaf636879f0215830c5e6ab99407069a625eaffde5d57b32d887b75dc14',
+			'org.jmock:jmock-junit4:81e3fff46ed56738a6f3f5147525d1d85cda591ce5df007cc193e735cee31113',
+			'org.jmock:jmock-legacy:19c76059eb254775ba884fc8039bc5c7d1700dc68cc55ad3be5b405a2a8a1819',
 			'org.hamcrest:hamcrest-library:711d64522f9ec410983bd310934296da134be4254a125080a0416ec178dfad1c',
 			'org.hamcrest:hamcrest-core:66fdef91e9739348df7a096aa384a5685f4e875584cce89386a7a47251c4d8e9',
 	]
