--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest
 	package="org.briarproject"
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:versionCode="11"
 	android:versionName="0.11">
 
 	<uses-sdk
-		xmlns:tools="http://schemas.android.com/tools"
 		android:minSdkVersion="9"
 
 		android:targetSdkVersion="22"
@@ -45,14 +45,10 @@
 			android:name=".android.CrashReportActivity"
 			android:excludeFromRecents="true"
 			android:exported="false"
+			android:finishOnTaskLaunch="true"
 			android:label="@string/crash_report_title"
 			android:launchMode="singleInstance"
-			android:process=":briar_error_handler"
-			android:taskAffinity="org.briarproject.android.CrashHandler">
-			<intent-filter>
-				<action android:name="org.briarproject.REPORT_CRASH"/>
-				<category android:name="android.intent.category.DEFAULT"/>
-			</intent-filter>
+			android:process=":briar_error_handler">
 		</activity>
 		<activity
 			android:name=".android.ExpiredActivity"
