--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 		exclude module: 'support-v4'
 		exclude module: 'recyclerview-v7'
 	}
+	compile ("ch.acra:acra:4.8.5") {
+		exclude module: 'support-v4'
+		exclude module: 'support-annotations'
+	}
 	compile "info.guardianproject.panic:panic:0.5"
 	compile "info.guardianproject.trustedintents:trustedintents:0.2"
 	compile "de.hdodenhof:circleimageview:2.0.0"
@@ -52,6 +56,7 @@ dependencyVerification {
 			'com.android.support:design:41a9cd75ca78f25df5f573db7cedf8bb66beae00c330943923ba9f3e2051736d',
 			'com.android.support:support-annotations:f347a35b9748a4103b39a6714a77e2100f488d623fd6268e259c177b200e9d82',
 			'com.android.support:recyclerview-v7:7606373da0931a1e62588335465a0e390cd676c98117edab29220317495faefd',
+			'ch.acra:acra:afd5b28934d5166b55f261c85685ad59e8a4ebe9ca1960906afaa8c76d8dc9eb',
 			'info.guardianproject.panic:panic:a7ed9439826db2e9901649892cf9afbe76f00991b768d8f4c26332d7c9406cb2',
 			'info.guardianproject.trustedintents:trustedintents:6221456d8821a8d974c2acf86306900237cf6afaaa94a4c9c44e161350f80f3e',
 			'de.hdodenhof:circleimageview:c76d936395b50705a3f98c9220c22d2599aeb9e609f559f6048975cfc1f686b8',
