Integration Tests for Introduction Client
* normal session where both introducees accept
* normal session where the first introducee declines
* normal session where the second introducee declines
* one session where a contact is introduced to herself
* one session where two identities of the same contact
  are introduced to each other

This introduces a new IntroductionAbortedEvent to signal when the
protocol was aborted. It is not yet used in the UI.

It closes #276

--- a/briar-android-tests/build.gradle
+++ b/briar-android-tests/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile project(':briar-api')
     compile project(':briar-core')
     testCompile 'junit:junit:4.12'
+    testCompile 'net.jodah:concurrentunit:0.4.2'
     compile 'com.android.support:appcompat-v7:23.2.0'
     testApt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'javax.annotation:jsr250-api:1.0'
