--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,13 @@ buildscript {
 		maven {
 			url "https://plugins.gradle.org/m2/"
 		}
+		jcenter()
 	}
+
 	dependencies {
 		classpath 'com.android.tools.build:gradle:1.5.0'
 		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+		classpath 'de.undercouch:gradle-download-task:2.1.0'
 		classpath files('briar-core/libs/gradle-witness.jar')
 	}
 }
